--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "hack",
   "version": "1.0.0",
   "main": "main.js",
+  "type": "module",
   "scripts": {
     "devStart": "nodemon main.js"
   },
@@ -10,10 +11,16 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.679.0",
+    "@aws-sdk/s3-request-presigner": "^3.679.0",
+    "aws-sdk": "^2.1691.0",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7",
+    "openai": "^4.68.4",
     "path": "^0.12.7"
   }
 }
